Añadí un copyright

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- 
+	Copyright de Mao al hacer el curso de GIT 2021 en la semana maldita
+-->
 <head>
 	<title>Ejemplo de cambio de título</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
