Poniendo cambios que se conflictuan

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright de Mao al hacer el curso de GIT 2021 en la semana maldita
 -->
 <head>
-	<title>Ejemplo de cambio de título</title>
+	<title>Para probar conflictos en commits</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Veamos qué pasa
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Sigue siendo de Mao</p>
 	</footer>
 </body>
 </html>
