--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!-- 
 	Copyright de Mao al hacer el curso de GIT 2021 en la semana maldita
 	Cambios antes de rebase
+	De regreso en master
 -->
 <head>
 	<title>Para probar conflictos en commits</title>
@@ -18,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Veamos qué pasa
+			Veamos qué pasa fuera de gran-problema. Estoy en master
 		</p>
 	</main>
 	<footer class="container">
