Terminamos con simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright de Mao al hacer el curso de GIT 2021 en la semana maldita
 -->
 <head>
-	<title>Para probar conflictos en commits</title>
+	<title>Cambios rápidos</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2014. Para probar</p>
 	</footer>
 </body>
 </html>
