cambios tras stash con ramas

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright de Mao al hacer el curso de GIT 2021 en la semana maldita
 -->
 <head>
-	<title>Cambios rápidos</title>
+	<title>Cambios rápidos para stash con ramas</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
